Bug 1299908 - Make sure we set the correct AGR to reference frame offset when flattening layers. r=mstange, a=ritu

--HG--
extra : source : 23530934541a0d8c23232273f7900af27ef7c09c